fixed deal type booking page: fix selection errors, add clear dates function, fix price total alignment in chrome.

--- a/app/webroot/css/generic.css
+++ b/app/webroot/css/generic.css
@@ -654,7 +654,8 @@ label{
 .reservation_info .check_in,
 .reservation_info .check_out,
 .summary_total_value{
-	float:right;
+  display:block;
+  float:right;
 }
 
 .date_legend{
